[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["dvkuzmin <dk_187@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
